--- a/app/src/main/res/drawable/edit_background.xml
+++ b/app/src/main/res/drawable/edit_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:color="#2DD592" android:width="2dp"></stroke>
+    <stroke android:color="#4781de" android:width="2dp"></stroke>
     <corners android:radius="7dp"></corners>
 </shape>
