--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -4,22 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="8dp"
-    android:id="@+id/item">
+    android:id="@+id/item"
+    android:backgroundTint="#9DB1EA"
+    android:layout_margin="15dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cards"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="270dp"
+        android:layout_marginTop="0dp"
+        android:elevation="8dp"
         android:orientation="vertical"
         android:padding="20dp"
-        android:elevation="8dp"
-        android:background="#9DB1EA"
-        android:layout_marginTop="70dp">
+>
+
 
         <TextView
             android:id="@+id/date"
@@ -28,14 +35,14 @@
             android:layout_marginStart="3dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
-            android:text="Date"
             android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
             android:drawablePadding="5dp"
+            android:text="Date"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.209"
+            app:layout_constraintHorizontal_bias="0.061"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -46,14 +53,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="8dp"
-            android:text="Time"
             android:drawableRight="@drawable/ic_baseline_watch_later_24"
             android:drawablePadding="5dp"
+            android:text="Time"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.916"
+            app:layout_constraintHorizontal_bias="0.973"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -109,6 +116,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="180dp"
             android:layout_marginTop="13dp"
+            android:layout_marginBottom="4dp"
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -133,6 +141,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.254" />
 
+
         <TextView
             android:id="@+id/diastolic_blood_pressure"
             android:layout_width="85dp"
@@ -154,8 +163,8 @@
             android:layout_height="50dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/round_button"
-            android:src="@drawable/ic_baseline_delete_forever_24"
             android:padding="10dp"
+            android:src="@drawable/ic_baseline_delete_forever_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.889"
@@ -171,8 +180,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/round_button"
-            android:src="@drawable/ic_baseline_edit_24"
             android:padding="10dp"
+            android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
